Revision history for CPAN-Common-Index

{{$NEXT}}

0.005     2014-09-23 21:26:13-04:00 America/New_York

    [FIXED]

    - Fixed tests for Class::Tiny 1.000 changes

0.004     2014-03-21 06:56:46-04:00 America/New_York

    [FIXED]

    - Fixed bug removing tempfiles on Windows (Kenichi Ishigaki)

    [CHANGED]

    - Modernized repo meta and support files

0.003     2013-08-14 16:18:00 America/New_York

    [FIXED]

    - Package searches are now correctly case sensitive

    - Fixed incorrect synopses

0.002     2013-06-27 22:10:59 America/New_York

    [FIXED]

    - Bumped Search::Dict prereq

0.001     2013-06-21 18:43:14 America/New_York

    - First release
