@@ -2,6 +2,11 @@ Revision history for CPAN-Common-Index
 
 {{$NEXT}}
 
+    [FIXED]
+
+    - Fixed package name search when there are packages that
+      differ only in case (e.g. "If" vs "if")
+
 0.005     2014-09-23 21:26:13-04:00 America/New_York
 
     [FIXED]
